Server cannot automatically recover if it terminates during recovery

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: 2.0.2
    • Component/s: Storage
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If server terminates during the journal prealloc step then auto recovery is not possible. One is forced to manually run repair to recover from the scenario.

      old lock file: B:\rpl2\mongod.lock. probably means unclean shutdown,
      but there are no journal files to recover.
      this is likely human error or filesystem corruption.
      found 3 dbs.
      see: http://dochub.mongodb.org/core/repair for more information
      *************
      Sun Feb 19 07:51:31 [initandlisten] exception in initAndListen: 12596 old lock file, terminating
      Sun Feb 19 07:51:31 dbexit:
      Sun Feb 19 07:51:31 [initandlisten] shutdown: going to close listening sockets...
      Sun Feb 19 07:51:31 [initandlisten] shutdown: going to flush diaglog...
      Sun Feb 19 07:51:31 [initandlisten] shutdown: going to close sockets...
      Sun Feb 19 07:51:31 [initandlisten] shutdown: waiting for fs preallocator...
      Sun Feb 19 07:51:31 [initandlisten] shutdown: lock for final commit...
      Sun Feb 19 07:51:31 [initandlisten] shutdown: final commit...
      Sun Feb 19 07:51:31 [initandlisten] shutdown: closing all files...
      Sun Feb 19 07:51:31 [initandlisten] closeAllFiles() finished
      Sun Feb 19 07:51:31 dbexit: really exiting now

            Assignee:
            Mathias Stearn
            Reporter:
            Sridhar Nanjundeswaran (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: