Don't fail to start-up if there are only prealloc files but no journal files SERVER-5056