src/mongo/db/dur_journal.h
@@ -55,9 +55,12 @@ namespace mongo {
         unsigned long long getLastDataFileFlushTime();
 
         /** never throws.
+            @param anyFiles by default we only look at j._* files. If anyFiles is true, return true
+                   if there are any files in the journal directory. acquirePathLock() uses this to
+                   make sure that the journal directory is mounted.
             @return true if there are any journal files in the journal dir.
         */
-        bool haveJournalFiles();
+        bool haveJournalFiles(bool anyFiles=false);
 
         // in case disk controller buffers writes
         const long long ExtraKeepTimeMs = 10000;
